# BET

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
bet/: __init__.py  constants.py  group_stats.py  math_eval.py  parsing.py  prompts.py  schemas.py
bet/data/: __init__.py  loaders.py  preprocess.py  profiling.py
bet/evaluation/: __init__.py  metrics.py
bet/rewards/: __init__.py  calibration.py  composite.py  efficiency.py  format.py  value.py
bet/training/: __init__.py  callbacks.py  config.py  grpo.py  model_utils.py  sft.py
bet/utils/: dist.py
configs/data/: build_sft_from_profiles.yaml
configs/eval/: math_eval.yaml
configs/grpo/: debug_cpu.yaml  qwen3_4b.yaml
configs/sft/: ds_qwen7b_lora.yaml  qwen3_4b_lora.yaml
docs/: data_format.md  release_sanity_check.md  reproducibility.md  reward_design.md  training_pipeline.md
examples/: README.md
examples/grpo/: mini_math_train.jsonl
examples/predictions/: sample_generations.jsonl
examples/profiling/: profile_summaries.jsonl  sample_group_rollouts.jsonl
examples/prompts/: bet_system_prompt.txt
examples/scripts/: run_eval_smoke.sh  run_reward_inspection.sh
examples/sft/: bet_cold_start_examples.jsonl
scripts/: build_sft_data.py  check_release.py  evaluate_generations.py  inspect_rewards.py  launch_vllm_server.sh  merge_lora.py  profile_rollouts.py  train_grpo.py  train_sft.py
tests/: test_metrics.py  test_parsing.py  test_rewards.py
