[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bet-reasoning"
version = "0.1.0"
description = "Research code for budget-efficient thinking and adaptive reasoning"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["bet*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
